--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,8 @@
   html,body{
     height: 100%;
     width: 100%;
-    background-color: rgba(20, 16, 16, 0.941);
+    background-color: black;
+    color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 }
